Implement routing and layout structure; add Axios instance and update CORS settings

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/LARAFAK-NOBG.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- SEO para buscadores -->
@@ -12,12 +12,12 @@
     />
     <meta
       name="keywords"
-      content="React, Vite, Landing Page, Web Development"
+      content="LaraFak Landing Page"
     />
     <meta name="robots" content="index, follow" />
 
     <link href="/dist/styles.css" rel="stylesheet" />
-    <title>Vite + React</title>
+    <title>LaraFak-Nonton anime subtitle Indonesia</title>
   </head>
   <body>
     <div id="root"></div>
